# mcp

./: .env.template  .gitignore  .jwmrc  AGENTS.md  Dockerfile  README.md  blocklists-basic.txt  deploy-dokku.md  entrypoint.sh  fly.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  remotebrowser-mcp.py  remotebrowser-mcp.spec
.github/workflows/: browser-api-e2e-test.yml  container.yml  deploy-dokku.yml  deploy-fly.yml  deploy-staging.yml  distill-tests.yml  extraction-test.yml  mcp-tests.yml  package.yml  publish.yml  static-analysis.yml
getgather/: __init__.py  browser.py  browsers_api_router.py  cli.py  client_ip.py  config.py  container_utils.py  distill.py  logs.py  main.py  request_info.py  resource_blocker.py  startup.py  testy.py  tracing.py  zen_actions.py  zen_distill.py
getgather/api/: chromefleet.py
getgather/auth/: auth.py  provider.py  settings.py
getgather/browser/: chromefleet.py  page.py  profile.py  proxy.py  proxy_builder.py  proxy_loader.py  proxy_types.py  resource_blocker.py
getgather/chromefleet/: __init__.py  client.py  exceptions.py  location_hierarchy.py  models.py  proxy_configurator.py  validation.py
getgather/mcp/: adidas.py  agoda.py  alfagift.py  aliexpress.py  alltrails.py  amain.py  amazon.py  amazon_zen.py  amazonca.py  americanairlines.py  app_ui_html_renderer.py  ashley.py  audible.py  auto_import.py  bbc.py  bedbathandbeyond.py  blinds.py  blindster.py  (+56 more)
hooks/: hook-getgather.mcp.py
tests/: conftest.py  manual.py  test_browser_api_e2e.py  test_request_info.py  test_tracing_middleware.py
(+335 files in other folders)
